@@ -197,6 +197,7 @@ void command_freeze(Client *c, const Seperator *sep);
 void command_unfreeze(Client *c, const Seperator *sep);
 void command_pvp(Client *c, const Seperator *sep);
 void command_setxp(Client *c, const Seperator *sep);
+void command_setpvppoints(Client *c, const Seperator *sep);
 void command_name(Client *c, const Seperator *sep);
 void command_npcspecialattk(Client *c, const Seperator *sep);
 void command_kill(Client *c, const Seperator *sep);
@@ -243,6 +244,7 @@ void command_itemsearch(Client *c, const Seperator *sep);
 void command_datarate(Client *c, const Seperator *sep);
 void command_setaaxp(Client *c, const Seperator *sep);
 void command_setaapts(Client *c, const Seperator *sep);
+void command_setcrystals(Client *c, const Seperator *sep);
 void command_stun(Client *c, const Seperator *sep);
 void command_ban(Client *c, const Seperator *sep);
 void command_suspend(Client *c, const Seperator *sep);
