@@ -2,6 +2,9 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==01/31/2010==
 Trevius: Exported new BoolNPCSpecAtks() to Perl::Mob.  This can be used to check if an NPC has certain special attacks set.
+Derision: Added support for purchasing from Discord Merchant (Class 59).
+Derision: Added support for purchasing from Norrath's Keepers and Dark Reign Merchants (Classes 67 and 68).
+Derision: Added commands #setpvppoints <amount> and #setcrystals <radiant|ebon> <amount>
 
 ==01/30/2010==
 cybernine186: Implemented the #suspend command.
